# Vanni

./: .gitignore  END_TO_END_WORKFLOW.md  LICENSE  README.md  example.env  package-lock.json  package.json
.github/instructions/: *.instructions.md
agent-worker/: Dockerfile  main.py  pyproject.toml
src/app/: globals.css  layout.tsx  page.tsx
src/app/(auth)/: layout.tsx
src/app/(auth)/sign-in/: page.tsx
src/app/(auth)/sign-up/: page.tsx
src/app/(dashboard)/: layout.tsx  page.tsx
src/app/(dashboard)/agents/: page.tsx
src/app/(dashboard)/meetings/: page.tsx
src/app/(dashboard)/meetings/[meetingId]/: page.tsx
src/app/api/webhook/: route.ts
src/components/: data-table.tsx  responsive-dialog.tsx
src/components/ui/: command.tsx
src/db/: schema.ts
src/inngest/: client.ts  functions.ts
src/lib/: auth-client.ts  auth.ts  gemini.ts  stream-video.ts
src/modules/agents/: types.ts
src/modules/agents/server/: procedures.ts
src/modules/agents/ui/components/: agent-form.tsx  agent-id-view-header.tsx  agents-list-header.tsx  agents-search-filter.tsx  columns.tsx  data-pagination.tsx  update-agent-dialog.tsx
src/modules/agents/ui/views/: agent-id-view.tsx  agents-view.tsx
src/modules/auth/ui/views/: sign-in-view.tsx  sign-up-view.tsx
src/modules/call/ui/components/: call-lobby.tsx
src/modules/dashboard/ui/components/: dashboard-command.tsx  dashboard-navbar.tsx  dashboard-sidebar.tsx  dashboard-trial.tsx  (+1 more)
src/modules/meetings/: types.ts
src/modules/meetings/server/: procedures.ts
src/trpc/: client.tsx  init.ts
src/trpc/routers/: _app.ts
(+15 files in other folders)
